# PatentEvalAIAgent

./: .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  market_agent.py  rights_agent.py  tech_agent.py
config/: __init__.py  patents.py  weights.py
outputs/: 0_2024_019484_report.docx  10-2024-0194841_evaluation_v2.json  10-2024-0194841_report.docx  10-2024-0194841_report_20251029_180725.docx  10-2024-0194841_report_20251029_191908.docx  10-2024-0194841_report_20251029_194331.docx  10-2025-0075422_evaluation_v2.json  10-2025-0075422_report.docx  10-2025-0075422_report_20251029_180725.docx  10-2025-0075422_report_20251029_191908.docx  10-2025-0075422_report_20251029_194331.docx  10-2025-0090445_evaluation_v2.json  10-2025-0090445_report.docx  10-2025-0090445_report_20251029_180725.docx  10-2025-0090445_report_20251029_191908.docx  10-2025-0090445_report_20251029_194331.docx  1020240194841_20251029_105707_report.docx  1020250075422_20251029_105707_report.docx  1020250090445_20251029_105707_report.docx  허 10_2025_007542_report.docx  허 10_2025_009044_report.docx
prompts/: market_eval.txt  rights_eval.txt  tech_eval.txt
utils/: __init__.py  docx_generator.py  pdf_processor.py  rag_manager.py  visualizer.py
