[tool.poetry]
name = "patent-evaluation-system"
version = "1.0.0"
description = "AI-powered patent evaluation system for R&D teams"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.13"
langchain-openai = "^0.2.14"
langchain-community = "^0.3.13"
langgraph = "^0.2.59"
python-dotenv = "^1.0.1"
pymupdf = "^1.25.2"
sentence-transformers = "^3.3.1"
faiss-cpu = "^1.9.0.post1"
numpy = "^1.26.4"
matplotlib = "^3.10.0"
python-docx = "^1.1.0"
markdown = "^3.6"
weasyprint = "^62.0"
duckduckgo-search = "^8.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false